[package]
name = "lemmy_api_common"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
name = "lemmy_api_common"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
lemmy_db_schema.workspace = true
lemmy_db_schema_file.workspace = true
lemmy_db_views_post.workspace = true
lemmy_db_views_create_post.workspace = true
lemmy_db_views_create_post_like.workspace = true
lemmy_db_views_delete_post.workspace = true
lemmy_db_views_edit_post.workspace = true
lemmy_db_views_feature_post.workspace = true
lemmy_db_views_get_post.workspace = true
lemmy_db_views_get_post_response.workspace = true
lemmy_db_views_get_posts.workspace = true
lemmy_db_views_get_posts_response.workspace = true
lemmy_db_views_get_site_metadata.workspace = true
lemmy_db_views_get_site_metadata_response.workspace = true
lemmy_db_views_hide_post.workspace = true
lemmy_db_views_link_metadata.workspace = true
lemmy_db_views_list_post_likes.workspace = true
lemmy_db_views_list_post_likes_response.workspace = true
lemmy_db_views_lock_post.workspace = true
lemmy_db_views_mark_post_as_read.workspace = true
lemmy_db_views_open_graph_data.workspace = true
lemmy_db_views_post_response.workspace = true
lemmy_db_views_remove_post.workspace = true
lemmy_db_views_save_post.workspace = true
lemmy_db_views_comment.workspace = true
lemmy_db_views_comment_response.workspace = true
lemmy_db_views_create_comment.workspace = true
lemmy_db_views_create_comment_like.workspace = true
lemmy_db_views_delete_comment.workspace = true
lemmy_db_views_distinguish_comment.workspace = true
lemmy_db_views_edit_comment.workspace = true
lemmy_db_views_get_comment.workspace = true
lemmy_db_views_get_comments.workspace = true
lemmy_db_views_get_comments_response.workspace = true
lemmy_db_views_list_comment_likes.workspace = true
lemmy_db_views_list_comment_likes_response.workspace = true
lemmy_db_views_remove_comment.workspace = true
lemmy_db_views_save_comment.workspace = true
lemmy_db_views_community.workspace = true
lemmy_db_views_add_mod_to_community.workspace = true
lemmy_db_views_add_mod_to_community_response.workspace = true
lemmy_db_views_ban_from_community.workspace = true
lemmy_db_views_ban_from_community_response.workspace = true
lemmy_db_views_block_community.workspace = true
lemmy_db_views_block_community_response.workspace = true
lemmy_db_views_community_response.workspace = true
lemmy_db_views_create_community.workspace = true
lemmy_db_views_delete_community.workspace = true
lemmy_db_views_edit_community.workspace = true
lemmy_db_views_follow_community.workspace = true
lemmy_db_views_get_community.workspace = true
lemmy_db_views_get_community_response.workspace = true
lemmy_db_views_hide_community.workspace = true
lemmy_db_views_list_communities.workspace = true
lemmy_db_views_list_communities_response.workspace = true
lemmy_db_views_remove_community.workspace = true
lemmy_db_views_transfer_community.workspace = true
lemmy_db_views_person.workspace = true
lemmy_db_views_add_admin.workspace = true
lemmy_db_views_add_admin_response.workspace = true
lemmy_db_views_ban_person.workspace = true
lemmy_db_views_ban_person_response.workspace = true
lemmy_db_views_block_person.workspace = true
lemmy_db_views_block_person_response.workspace = true
lemmy_db_views_captcha_response.workspace = true
lemmy_db_views_change_password.workspace = true
lemmy_db_views_delete_account.workspace = true
lemmy_db_views_generate_totp_secret_response.workspace = true
lemmy_db_views_get_captcha_response.workspace = true
lemmy_db_views_get_person_details.workspace = true
lemmy_db_views_get_person_details_response.workspace = true
lemmy_db_views_list_media.workspace = true
lemmy_db_views_list_media_response.workspace = true
lemmy_db_views_login.workspace = true
lemmy_db_views_login_response.workspace = true
lemmy_db_views_password_change_after_reset.workspace = true
lemmy_db_views_password_reset.workspace = true
lemmy_db_views_register.workspace = true
lemmy_db_views_update_totp.workspace = true
lemmy_db_views_update_totp_response.workspace = true
lemmy_db_views_verify_email.workspace = true
lemmy_db_views_custom_emoji.workspace = true
lemmy_db_views_custom_emoji_response.workspace = true
lemmy_db_views_create_custom_emoji.workspace = true
lemmy_db_views_delete_custom_emoji.workspace = true
lemmy_db_views_edit_custom_emoji.workspace = true
lemmy_db_views_private_message.workspace = true
lemmy_db_views_private_message_response.workspace = true
lemmy_db_views_create_private_message.workspace = true
lemmy_db_views_delete_private_message.workspace = true
lemmy_db_views_edit_private_message.workspace = true
lemmy_db_views_site.workspace = true
lemmy_db_views_site_response.workspace = true
lemmy_db_views_create_site.workspace = true
lemmy_db_views_edit_site.workspace = true
lemmy_db_views_upload_image_response.workspace = true
lemmy_db_views_get_modlog.workspace = true
lemmy_db_views_modlog_combined.workspace = true
lemmy_db_views_search_combined.workspace = true
lemmy_db_views_resolve_object.workspace = true
lemmy_db_views_resolve_object_response.workspace = true
